<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ResidencySecretery.RSResidentTypeActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginLeft="20dp"
            android:onClick="back"
            android:src="@drawable/ic_arrow_back_black_24dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ResidentTypeTitle"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_flat"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/click_box"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/flat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/flate"
                android:textColor="@color/black"
                android:textSize="20dp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>




        <androidx.cardview.widget.CardView
            android:id="@+id/card_rowhouse"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/click_box"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/bungalow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/rowhouse"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

</LinearLayout>